# SamaCTLI

./: .env.example  .gitignore  README.md  pyproject.toml  samaCTLI.py
SamaCTLI/: __init__.py  __main__.py  config.py  constants.py  resultRedirect.py  toolDetection.py  ui.py
SamaCTLI/ai/: __init__.py  manager.py
SamaCTLI/core/: __init__.py  ai_session.py  api_manager.py  model_discovery.py
SamaCTLI/menus/: __init__.py  menu_apikeys.py  menu_chat.py  menu_models.py  results.py  tools.py
SamaCTLI/providers/: __init__.py  base.py  openai_compat.py  registry.py
SamaCTLI/tools/: __init__.py  ai_tools.py  detection.py  registry.py  runner.py
menus/: help.md  results.py  toolmenu.py
tool_results/ffuf/: output_ffuf.txt
tool_results/nmap/: output_nmap.txt
tool_results/nuclei/: output_nuclei.txt
tools/modules/: ffuf.json  katana.json  nmap.json  nuclei.json
